<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.gaprot.omosanmaps.filter.FilterActivity">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_starred"
        android:orderInCategory="100"
        android:title="@string/action_starred"
        android:icon="@drawable/ic_star_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom" />
</menu>
